--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.24",
-    "expo": "~54.0.0",
+    "@react-navigation/native-stack": "^7.3.26",
+    "expo": "~54.0.10",
     "expo-audio": "~1.0.13",
     "expo-av": "^16.0.7",
-    "expo-file-system": "~19.0.14",
+    "expo-file-system": "~19.0.15",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
@@ -25,10 +25,13 @@
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
     "firebase": "^12.0.0",
+    "geolib": "^3.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "1.20.1",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
