--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@mapbox/polyline": "^1.2.1",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@turf/turf": "^7.2.0",
+    "base-64": "^1.0.0",
     "expo": "~54.0.10",
     "expo-audio": "~1.0.13",
     "expo-av": "^16.0.7",
@@ -23,6 +24,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
+    "expo-sharing": "^14.0.7",
     "expo-speech": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
