--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@turf/turf": "^7.2.0",
     "base-64": "^1.0.0",
-    "expo": "~54.0.10",
+    "expo": "^54.0.11",
     "expo-audio": "~1.0.13",
     "expo-av": "^16.0.7",
-    "expo-file-system": "~19.0.15",
+    "expo-file-system": "^19.0.16",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
