--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/cli": "^54.0.5"
+    "@expo/cli": "^54.0.5",
+    "@react-native-community/cli": "^20.0.2"
   },
   "private": true
 }
