--- a/package.json
+++ b/package.json
@@ -12,23 +12,30 @@
     "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@turf/turf": "^7.2.0",
     "base-64": "^1.0.0",
-    "expo": "^54.0.12",
+    "expo": "54.0.13",
+    "expo-application": "~7.0.7",
     "expo-audio": "~1.0.13",
+    "expo-auth-session": "~7.0.8",
     "expo-av": "^16.0.7",
-    "expo-file-system": "^19.0.16",
+    "expo-crypto": "~15.0.7",
+    "expo-file-system": "~19.0.17",
+    "expo-firebase-recaptcha": "^1.4.4",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-media-library": "~18.2.0",
+    "expo-random": "^14.0.1",
     "expo-sharing": "^14.0.7",
     "expo-speech": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
+    "expo-web-browser": "^15.0.8",
     "firebase": "^12.0.0",
     "geolib": "^3.3.4",
     "react": "19.1.0",
@@ -41,6 +48,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-view-shot": "4.0.3",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
