--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-speech": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "expo-video": "~3.0.11",
     "expo-web-browser": "^15.0.8",
     "firebase": "^12.0.0",
